Fix a previous change in alignment to avoid random elements to stick to the right side of the screen :-D - This might reverse some previous responsive style improvements

--- a/main/css/base.css
+++ b/main/css/base.css
@@ -254,7 +254,7 @@ form .formw input {
 /* end chamilo forms fixes */
 
 #top_main_content .span3 {
-  float: right;
+  float: left;
 }
 #top_main_content .span9 {
   float: left;
